--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+.center{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+
 body{
   margin: 0px;
   padding: 0px;
